# ci-guardian-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial.py
app/: main.py
app/api/: auth.py  events.py  github.py  notifications.py  reports.py  runs.py  webhooks.py
app/core/: config.py  deps.py  security.py
app/db/: session.py
app/models/: __init__.py  db.py
app/schemas/: __init__.py  schemas.py
app/services/: github_client.py  telegram_client.py
app/services/analysis/: pipeline.py  prompts.py
app/workers/: jobs.py
