[project]
name = "ci-guardian"
version = "0.1.0"
description = "Auto-detect CI/CD failures, root-cause them with AI, and surface proposed fixes"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "pyjwt>=2.8.0",
    "authlib>=1.3.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "python-telegram-bot>=21.0.0",
    "cryptography>=42.0.0",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.0.0",
    "psycopg2-binary>=2.9.12",
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
]
